# hw-web-2

./: Dockerfile  README.md  pyproject.toml
console_bot/: handlers.py  main.py  sort.py
hw_web_2/: Notes.py  ab_work.py
